feat(auth): add authentication routes and registration view
- Implemented routes for user registration, login, and logout in authRoutes.js.
- Created a registration form view (register.ejs) with fields for name, email, CPF, phone, and password confirmation.
- Added error handling for registration errors in the view.

--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   },
   "homepage": "https://github.com/KaiqueCarvalho01/Automobile#readme",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "connect-sqlite3": "^0.9.15",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "express-session": "^1.18.1",
     "sqlite3": "^5.1.7"
   }
 }
