--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "automobile",
   "version": "1.0.0",
-  "description": "Este é um projeto desenvolvido para a disciplina **Programação de Scripts**. O nosso objetivo é apresentar um site com páginas relacionadas ao tema **venda de automóveis**, utilizando tecnologias como **HTML**, **CSS**, **JavaScript** e **Bootstrap**.",
+  "description": "Este é um projeto desenvolvido por Kaique Carvalho e Rogério de Lima para a disciplina Programação de Scripts. O nosso objetivo é apresentar um site com páginas relacionadas ao tema venda de automóveis. A aplicação utiliza tecnologias como Node.js, Express, EJS, SQLite3 e Bootstrap para oferecer uma interface interativa e funcional.",
   "main": "dist/index.js",
   "scripts": {
     "start": "node dist/index.js",
@@ -34,11 +34,9 @@
     "@types/bcrypt": "^5.0.2",
     "@types/compression": "^1.8.1",
     "@types/connect-sqlite3": "^0.9.5",
-    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/express-session": "^1.18.2",
     "@types/jsonwebtoken": "^9.0.9",
-    "@types/mongoose": "^5.11.96",
     "@types/node": "^24.0.1",
     "@types/sqlite3": "^3.1.11",
     "copyfiles": "^2.4.1",
