--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bcrypt": "^6.0.0",
     "compression": "^1.8.0",
     "connect-sqlite3": "^0.9.15",
+    "cpf-cnpj-validator": "^1.0.3",
     "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
